# Omelette

./: .gitignore  Makefile  README.md  meson.build
omelette/: meson.build
omelette/ecs/: Component.hpp  ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp
omelette/ecs/Components/: MeshComponent.cpp  MeshComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp
omelette/utils/: Shapes.cpp  Shapes.hpp  Vec3.cpp  Vec3.hpp
sandbox/: meson.build  sandbox.cpp
src/: meson.build
src/omelette/: PhysicsWorld.cpp  PhysicsWorld.hpp  RigidBody.cpp  RigidBody.hpp  Vec3.cpp  Vec3.hpp  meson.build
src/simulation/: main.cpp  meson.build
